This is updated branch right before all projects are merged in test123.

--- a/Arcade/Arcade/Arcade.csproj
+++ b/Arcade/Arcade/Arcade.csproj
@@ -145,5 +145,14 @@
   <ItemGroup>
     <None Include="Resources\fire.wav" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ship5.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\explosion.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ast3trans.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
