--- a/Arcade/Arcade/Arcade.csproj
+++ b/Arcade/Arcade/Arcade.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -104,6 +105,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Bounce.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\GuilesThemeI.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Laser_Shoot1.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\LoseLife.wav" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
