--- a/Arcade/Arcade/Arcade.csproj
+++ b/Arcade/Arcade/Arcade.csproj
@@ -352,5 +352,14 @@
   <ItemGroup>
     <None Include="Resources\FroggerMenuImage1.gif" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\jump.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\splash.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\splat.wav" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
